queue : add simple queue example
Change-Id: I6ef474cb28d888181b84e505ca5eeb3c97fad72e

--- a/queue/test/Makefile.am
+++ b/queue/test/Makefile.am
@@ -1,9 +1,10 @@
-bin_PROGRAMS = hello
+bin_PROGRAMS = hello_queue
 
-hello_SOURCES = main.c
+hello_queue_SOURCES = main.c
 
-hello_CFLAGS = \
+hello_queue_CFLAGS = \
 	-I$(top_srcdir)/src
 
-hello_LDADD = \
-	 $(top_builddir)/src/libqueue.la
+hello_queue_LDADD = \
+	$(top_builddir)/src/libqueue.la \
+	-lpthread
