queue : add pkgconfig
Change-Id: I5343f4f82dfb67e538b7b08b6b0166d0250b01eb

--- a/queue/Makefile.am
+++ b/queue/Makefile.am
@@ -1,1 +1,9 @@
 SUBDIRS = src test
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = queue.pc
+DISTCLEANFILES = 		\
+	queue.pc
+	
+EXTRA_DIST =			\
+	queue.pc.in
