message queue : remove queue for using queue library.
Change-Id: I8bd097e9b1b2d4f090dfc35b241a26362cfbb784

--- a/message_queue/src/Makefile.am
+++ b/message_queue/src/Makefile.am
@@ -7,8 +7,7 @@ include_HEADERS = \
 	message.h
 
 libmessage_la_CFLAGS = \
-	$(QUEUE_CFLAGS) \
-	-lpthread
+	$(QUEUE_CFLAGS)
 
 libmessage_la_LDFLAGS = \
 	$(QUEUE_LIBS) \
