--- a/message_queue/test/Makefile.am
+++ b/message_queue/test/Makefile.am
@@ -3,7 +3,8 @@ bin_PROGRAMS = hello_queue
 hello_queue_SOURCES = main.c
 
 hello_queue_CFLAGS = \
-	-I$(top_srcdir)/src
+	-I$(top_srcdir)/src \
+	$(QUEUE_CFLAGS)
 
 hello_queue_LDADD = \
 	$(top_builddir)/src/libmessage.la \
