modify wrong flags
Change-Id: I865cc3e6698830462e63c2b0b6b8700dc8944f9e

--- a/message_queue/test/Makefile.am
+++ b/message_queue/test/Makefile.am
@@ -7,5 +7,7 @@ hello_queue_CFLAGS = \
 	$(QUEUE_CFLAGS)
 
 hello_queue_LDADD = \
-	$(top_builddir)/src/libmessage.la \
+	$(top_builddir)/src/libmessage.la
+
+hello_LDFLAGS = \
 	-lpthread
