update segfault example
Change-Id: I9fddb6ad2d5eec624181e2846d86477fb498a335

--- a/segmentationfault/src/Makefile.am
+++ b/segmentationfault/src/Makefile.am
@@ -1,8 +1,8 @@
-bin_PROGRAMS = hello
+bin_PROGRAMS = hellofault
 
-hello_SOURCES = hello.c
+hellofault_SOURCES = hellofault.c
 
-hello_CFLAGS = \
+hellofault_CFLAGS = \
 	-I$(top_srcdir)/src
 
 #hello_LDADD = \
